--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -26,11 +26,12 @@
     "@linaria/react": "^3.0.0-beta.15",
     "@linaria/shaker": "^3.0.0-beta.15",
     "@loadable/component": "^5.14.1",
+    "@metaplex-foundation/js-next": "^0.10.0",
     "@orca-so/sdk": "^1.2.15",
     "@orca-so/stablecurve": "^1.0.5",
     "@p2p-wallet-web/core": "^1.0.0",
-    "@p2p-wallet-web/token-utils": "^1.0.0",
     "@p2p-wallet-web/sail": "^2.8.0",
+    "@p2p-wallet-web/token-utils": "^1.0.0",
     "@p2p-wallet-web/ui": "^1.0.0",
     "@project-serum/anchor": "^0.20.1",
     "@project-serum/serum": "^0.13.60",
@@ -45,7 +46,7 @@
     "@saberhq/use-solana": "^1.12.27",
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.3996",
-    "@solana/web3.js": "^1.31.0",
+    "@solana/web3.js": "^1.44.0",
     "@transak/transak-sdk": "^1.0.28",
     "@use-gesture/react": "^10.2.4",
     "@xstate/react": "^1.5.1",
@@ -65,6 +66,7 @@
     "fuse.js": "^6.5.3",
     "highcharts": "^9.0.0",
     "history": "^5.0.0",
+    "http2": "^3.3.7",
     "jsbi": "^4.1.0",
     "lodash.throttle": "^4.1.1",
     "nprogress": "^0.2.0",
