--- a/package.json
+++ b/package.json
@@ -25,10 +25,17 @@
     "lerna": "^4.0.0",
     "lint-staged": "^11.2.2",
     "prettier": "^2.4.1",
+    "reflect-metadata": "^0.1.13",
     "typescript": "^4.5.4"
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint --cache --fix",
     "*.{js,json,jsx,html,css,md}": "prettier --write"
+  },
+  "engines": {
+    "node": "= 16.x"
+  },
+  "dependencies": {
+    "@metaplex-foundation/mpl-token-metadata": "~2.0"
   }
 }
